Temporary naive 1.19.2 implementation of block entities. this necessitated some changes in other entity classes too.